--- a/VidCoder/Resources/EncodeDetailsRes.pt.resx
+++ b/VidCoder/Resources/EncodeDetailsRes.pt.resx
@@ -98,18 +98,24 @@
 	<resheader name="writer">
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
-	
+	<data name="EncodeDetailsWindowTitle" xml:space="preserve">
+    <value>Detalhes da codificação</value>
+  </data>
 	<data name="QueueSectionHeader" xml:space="preserve">
     <value>Lista</value>
   </data>
-	
+	<data name="ScanPassLabel" xml:space="preserve">
+    <value>Análise nº:</value>
+  </data>
 	<data name="FirstPassLabel" xml:space="preserve">
     <value>Primeira passagem:</value>
   </data>
 	<data name="SecondPassLabel" xml:space="preserve">
     <value>Segunda passagem:</value>
   </data>
-	
+	<data name="EncodePassLabel" xml:space="preserve">
+    <value>Passagem nº:</value>
+  </data>
 	<data name="JobLabel" xml:space="preserve">
     <value>Tarefa:</value>
   </data>
