--- a/VidCoder/Resources/EncodingRes.pt.resx
+++ b/VidCoder/Resources/EncodingRes.pt.resx
@@ -159,7 +159,9 @@
   
   
   
-  
+  <data name="Advanced_WeightPToolTip" xml:space="preserve">
+    <value>Realiza uma análise extra para decidir sobre a ponderação de parâmetros para cada frame. Isto melhora ligeiramente a compressão geral e melhora a qualidade dos fades significativamente. O perfil "Baixo", necessário para iPods e dispositivos similares, requer que esta opção (P-Frames ponderados) seja desactivada. Note que alguns dispositivos e leitores, mesmo aqueles que suportam o perfil "base", podem ter problemas com esta opção: O Apple TV, por exemplo, é completamente incompatível com isto.</value>
+  </data>
   <data name="Audio_DrcToolTip" xml:space="preserve">
     <value>Dynamic Range Compression (Rácio de Compressão Dinâmica). Os valores válidos são 0-4.  Para pistas de áudio que possuem um amplo alcance dinâmico (sequências muito altas e muito macias). O DRC permite "comprimir" o intervalo fazendo as secções macias mais altas e as secções suaves mais fortes.</value>
   </data>
@@ -184,7 +186,9 @@
   <data name="WebOptimizedToolTip" xml:space="preserve">
     <value>Ajuste o ficheiro para que seja reproduzido melhor em download progressivo. (Por ex.: youtube)</value>
   </data>
-  
+  <data name="ProfileToolTip" xml:space="preserve">
+    <value>Limite o perfil da faixa de saída. Se especificar um perfil, irá substitui todas as outras configurações.  Apenas deve definir um perfil de saída se souber que seu dispositivo de reprodução apenas suporta um determinado perfil.  Por defeito: Alto.</value>
+  </data>
   <data name="X264TuneToolTip" xml:space="preserve">
     <value>Ajuste opções adicionais para optimizar o seu conteúdo de entrada. Se especificar um ajuste, as alterações serão aplicadas depois da predefinição, mas antes de todos os outros parâmetros.  Por defeito: Nenhum</value>
   </data>
@@ -221,7 +225,9 @@
   <data name="TabHeader_Audio" xml:space="preserve">
     <value>Áudio</value>
   </data>
-  
+  <data name="TabHeader_Advanced" xml:space="preserve">
+    <value>Configurações Avançadas</value>
+  </data>
   <data name="Rename" xml:space="preserve">
     <value>Renomear</value>
   </data>
@@ -351,9 +357,15 @@
   <data name="TuneLabel" xml:space="preserve">
     <value>Ajuste:</value>
   </data>
-  
-  
-  
+  <data name="Profile_baseline" xml:space="preserve">
+    <value>Baixo</value>
+  </data>
+  <data name="Profile_main" xml:space="preserve">
+    <value>Base</value>
+  </data>
+  <data name="Profile_high" xml:space="preserve">
+    <value>Alto (Padrão)</value>
+  </data>
   <data name="Preset_UltraFast" xml:space="preserve">
     <value>Ultra rápido</value>
   </data>
@@ -703,7 +715,9 @@
   <data name="AdvancedOptionsStringLabel" xml:space="preserve">
     <value>Opções avançadas adicionais x264:</value>
   </data>
-  
+  <data name="LevelToolTip" xml:space="preserve">
+    <value>Define e garante a conformidade com o nível H.264 especificado.  Substitui todas as outras configurações.</value>
+  </data>
   
   <data name="VideoCodecLabel" xml:space="preserve">
     <value>Codec de vídeo:</value>
@@ -788,12 +802,18 @@
   <data name="RemoveAudioEncodingToolTip" xml:space="preserve">
     <value>Remover a codificação de áudio</value>
   </data>
-  
-  
+  <data name="AutoPassthroughFallbackLabel" xml:space="preserve">
+    <value>Plano B:</value>
+  </data>
+  <data name="AutoPassthroughFallbackToolTip" xml:space="preserve">
+    <value>A Passagem directa não funciona com todos os codecs de áudio. Aqui poderá especificar o codec a utilizar se a faixa não poder ser passada directamente.</value>
+  </data>
   <data name="EncoderSettings" xml:space="preserve">
     <value>Configurações do codificador</value>
   </data>
-  
+  <data name="QsvDecodingLabel" xml:space="preserve">
+    <value>Decodificação QSV</value>
+  </data>
   <data name="ScaleMethod_Lanczos" xml:space="preserve">
     <value>Lanczos</value>
   </data>
@@ -803,12 +823,19 @@
   <data name="QsvPreset_Speed" xml:space="preserve">
     <value>Velocidade</value>
   </data>
-  
+  <data name="QsvPreset_Balanced" xml:space="preserve">
+    <value>Equilibrado</value>
+  </data>
   <data name="QsvPreset_Quality" xml:space="preserve">
     <value>Qualidade</value>
   </data>
-  
-  
+  <data name="PresetToolTip" xml:space="preserve">
+    <value>Alter esta opção para ganhar eficiência de compressão em relação à velocidade de codificação. Por defeito deixe em "médio".</value>
+  </data>
+  <data name="ScaleMethodToolTip" xml:space="preserve">
+    <value>Lanczos: É o algoritmo de dimensionamento com a melhor qualidade. (Padrão)
+Bicubic: É um algoritmo de dimensionamento acelerado para hardware OpenCL.</value>
+  </data>
   <data name="AudioEncoder_Passthrough" xml:space="preserve">
     <value>Passagem directa</value>
   </data>
@@ -831,8 +858,12 @@
   <data name="Passthrough_mp3" xml:space="preserve">
     <value>MP3</value>
   </data>
-  
-  
+  <data name="ScopeLabel" xml:space="preserve">
+    <value>Âmbito</value>
+  </data>
+  <data name="PassthroughScopeToolTip" xml:space="preserve">
+    <value>Especifica para qual codec se aplica a passagem directa.</value>
+  </data>
   <data name="FlipHorizontalCheckBox" xml:space="preserve">
     <value>Inverter horizontalmente</value>
   </data>
@@ -848,13 +879,25 @@
   <data name="Rotation_180" xml:space="preserve">
     <value>180°</value>
   </data>
-  
-  
-  
+  <data name="RotationToolTip" xml:space="preserve">
+    <value>Rode a imagem. Isto é aplicado no fim de tudo. Dimensionamento e corte.</value>
+  </data>
+  <data name="FlipHorizontalToolTip" xml:space="preserve">
+    <value>Inverta a imagem horizontalmente. Isto é aplicado antes de qualquer rotação.</value>
+  </data>
+  <data name="FlipVerticalToolTip" xml:space="preserve">
+    <value>Inverter a imagem verticalmente. Isto é aplicado antes de qualquer rotação.</value>
+  </data>
   <data name="PassthroughIfPossibleCheckBox" xml:space="preserve">
     <value>Passagem directa se possível</value>
   </data>
-  
-	
-	
+  <data name="PassthroughIfPossibleToolTip" xml:space="preserve">
+    <value>Se a faixa de origem coincidir com o codec, será passada automaticamente em vez de codificada.</value>
+  </data>
+	<data name="ScalingAlgorithmLabel" xml:space="preserve">
+    <value>Algoritmo de escalonamento:</value>
+  </data>
+	<data name="RotationLabel" xml:space="preserve">
+    <value>Rotação:</value>
+  </data>
 </root>
