--- a/VidCoder/Resources/EnumsRes.pt.resx
+++ b/VidCoder/Resources/EnumsRes.pt.resx
@@ -154,16 +154,36 @@
   <data name="Deinterlace_Slower" xml:space="preserve">
     <value>Mais lento</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="DenoisePreset_Light" xml:space="preserve">
+    <value>Clara</value>
+  </data>
+  <data name="DenoisePreset_Medium" xml:space="preserve">
+    <value>Média</value>
+  </data>
+  <data name="DenoisePreset_Strong" xml:space="preserve">
+    <value>Forte</value>
+  </data>
+  <data name="DenoisePreset_Ultralight" xml:space="preserve">
+    <value>Ultra clara</value>
+  </data>
+  <data name="DenoiseTune_Animation" xml:space="preserve">
+    <value>Animação</value>
+  </data>
+  <data name="DenoiseTune_Film" xml:space="preserve">
+    <value>Filme</value>
+  </data>
+  <data name="DenoiseTune_Grain" xml:space="preserve">
+    <value>Grão</value>
+  </data>
+  <data name="DenoiseTune_HighMotion" xml:space="preserve">
+    <value>Movimentos rápidos</value>
+  </data>
+  <data name="Denoise_HQDN3D" xml:space="preserve">
+    <value>hqdn3d</value>
+  </data>
+  <data name="Denoise_NLMeans" xml:space="preserve">
+    <value>NL-Means</value>
+  </data>
   <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
     <value>Não fazer nada</value>
   </data>
