--- a/VidCoder/Resources/PreviewRes.pt.resx
+++ b/VidCoder/Resources/PreviewRes.pt.resx
@@ -180,5 +180,7 @@
   <data name="BottomMargin" xml:space="preserve">
     <value>Margem inferior</value>
   </data>
-	
+	<data name="PlaySourceDisabledNotFoundToolTip" xml:space="preserve">
+    <value>Não foi possível encontrar o ficheiro de origem.</value>
+  </data>
 </root>
