Picker window and save/revert/system mostly in place.

--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -477,23 +477,29 @@
   <data name="ExportPresetFilePickerText" xml:space="preserve">
     <value>Export preset</value>
   </data>
-  <data name="PresetSaveConfirmMessage" xml:space="preserve">
-    <value>Do you want to save changes to your current preset?</value>
+  <data name="SaveConfirmMessage" xml:space="preserve">
+    <value>Do you want to save changes to your current {0}?</value>
+    <comment>{0} is "picker" or "preset" (or the translated word)</comment>
   </data>
-  <data name="PresetSaveConfirmTitle" xml:space="preserve">
-    <value>Save current preset?</value>
+  <data name="SaveConfirmTitle" xml:space="preserve">
+    <value>Save current {0}?</value>
+    <comment>{0} is "picker" or "preset" (or the translated word)</comment>
   </data>
-  <data name="PresetRevertConfirmMessage" xml:space="preserve">
-    <value>Are you sure you want to revert all unsaved changes to this preset?</value>
+  <data name="RevertConfirmMessage" xml:space="preserve">
+    <value>Are you sure you want to revert all unsaved changes to this {0}?</value>
+    <comment>{0} is "picker" or "preset" (or the translated word)</comment>
   </data>
-  <data name="PresetRevertConfirmTitle" xml:space="preserve">
-    <value>Revert Preset</value>
+  <data name="RevertConfirmTitle" xml:space="preserve">
+    <value>Revert {0}</value>
+    <comment>{0} is "picker" or "preset" (or the translated word)</comment>
   </data>
-  <data name="PresetRemoveConfirmMessage" xml:space="preserve">
-    <value>Are you sure you want to remove this preset?</value>
+  <data name="RemoveConfirmMessage" xml:space="preserve">
+    <value>Are you sure you want to remove this {0}?</value>
+    <comment>{0} is "picker" or "preset" (or the translated word)</comment>
   </data>
-  <data name="PresetRemoveConfirmTitle" xml:space="preserve">
-    <value>Remove Preset</value>
+  <data name="RemoveConfirmTitle" xml:space="preserve">
+    <value>Remove {0}</value>
+    <comment>{0} is "picker" or "preset" (or the translated word)</comment>
   </data>
   <data name="UserConfigCorrupted" xml:space="preserve">
     <value>Configuration was corrupted and could not be loaded. Some of your settings may have been reset.</value>
@@ -620,14 +626,22 @@
     <value>Incompatible database file</value>
     <comment>Dialog title for a message explaining that the current database file is unsupported.</comment>
   </data>
-	<data name="PickerMenuItem" xml:space="preserve">
+  <data name="PickerMenuItem" xml:space="preserve">
     <value>Picker</value>
   </data>
-	<data name="CouldNotLoadPickerMessage" xml:space="preserve">
+  <data name="CouldNotLoadPickerMessage" xml:space="preserve">
     <value>Could not load picker: </value>
   </data>
-	<data name="PickerNameTemplate" xml:space="preserve">
+  <data name="PickerNameTemplate" xml:space="preserve">
     <value>Picker {0}</value>
     <comment>The template for automatically named Pickers. For example Picker 1, Picker 2, etc.</comment>
+  </data>
+  <data name="PickerWord" xml:space="preserve">
+    <value>picker</value>
+    <comment>Will be inserted into sentences that refer to a picker</comment>
+  </data>
+  <data name="PresetWord" xml:space="preserve">
+    <value>preset</value>
+    <comment>Will be inserted into sentences that refer to a preset</comment>
   </data>
 </root>
