--- a/VidCoder/Resources/OptionsRes.es.resx
+++ b/VidCoder/Resources/OptionsRes.es.resx
@@ -418,5 +418,7 @@
   <data name="PreserveFolderStructureToolTip" xml:space="preserve">
     <value>Si codificas una carpeta llena de archivos se pondrán las versiones codificadas en subcarpetas para que coincida con la estructura del directorio original.</value>
   </data>
-	
+	<data name="CustomPreviewFolderCheckBox" xml:space="preserve">
+    <value>Carpeta personalizada para las previsualizaciones:</value>
+  </data>
 </root>
