--- a/VidCoder/Resources/EnumsRes.es.resx
+++ b/VidCoder/Resources/EnumsRes.es.resx
@@ -154,14 +154,30 @@
   <data name="Deinterlace_Slower" xml:space="preserve">
     <value>Slower</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="DenoisePreset_Light" xml:space="preserve">
+    <value>Ligero</value>
+  </data>
+  <data name="DenoisePreset_Medium" xml:space="preserve">
+    <value>Medio</value>
+  </data>
+  <data name="DenoisePreset_Strong" xml:space="preserve">
+    <value>Fuerte</value>
+  </data>
+  <data name="DenoisePreset_Ultralight" xml:space="preserve">
+    <value>Ultraligero</value>
+  </data>
+  <data name="DenoiseTune_Animation" xml:space="preserve">
+    <value>Animación</value>
+  </data>
+  <data name="DenoiseTune_Film" xml:space="preserve">
+    <value>Película</value>
+  </data>
+  <data name="DenoiseTune_Grain" xml:space="preserve">
+    <value>Grano</value>
+  </data>
+  <data name="DenoiseTune_HighMotion" xml:space="preserve">
+    <value>Alto movimiento</value>
+  </data>
   
   
   <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
