Added directory override and made it work in all batch cases. Added a couple output path options to the picker. Made title picker work in all batch cases. Gave the right hand chevron portion of the split button more clickable area.

--- a/VidCoder/Resources/CommonRes.resx
+++ b/VidCoder/Resources/CommonRes.resx
@@ -252,4 +252,16 @@ A full copy of the GNU General Public License has been included along with this 
   <data name="FileFailureErrorTitle" xml:space="preserve">
     <value>File operation error</value>
   </data>
+  <data name="OverrideNameFormatCheckBox" xml:space="preserve">
+    <value>Override naming format:</value>
+  </data>
+  <data name="OutputToSourceDirCheckBox" xml:space="preserve">
+    <value>Output to the source directory if possible</value>
+  </data>
+  <data name="PreserveFolderStructureCheckBox" xml:space="preserve">
+    <value>Preserve folder structure in batch encodes</value>
+  </data>
+  <data name="PreserveFolderStructureToolTip" xml:space="preserve">
+    <value>If you encode a folder full of files the encoded versions will be put into subfolders to match the source directory structure.</value>
+  </data>
 </root>
