--- a/VidCoder/Resources/PickerRes.resx
+++ b/VidCoder/Resources/PickerRes.resx
@@ -144,11 +144,17 @@
   <data name="WindowTitle" xml:space="preserve">
     <value>Picker: {0}</value>
   </data>
-	<data name="TitleSelection" xml:space="preserve">
+  <data name="TitleSelection" xml:space="preserve">
     <value>Title selection</value>
   </data>
-	<data name="PickerButtonFormat" xml:space="preserve">
+  <data name="PickerButtonFormat" xml:space="preserve">
     <value>Picker: {0}</value>
     <comment>{0} is the name of the picker. This string shows up on the picker split button.</comment>
+  </data>
+  <data name="OutputLocation" xml:space="preserve">
+    <value>Output location</value>
+  </data>
+  <data name="OverrideDirectoryCheckBox" xml:space="preserve">
+    <value>Override directory:</value>
   </data>
 </root>
