--- a/VidCoder/Resources/QueueTitlesRes.resx
+++ b/VidCoder/Resources/QueueTitlesRes.resx
@@ -141,19 +141,13 @@
     <value>minutes</value>
     <comment>Goes after the second number box in the length range specification.</comment>
   </data>
-  <data name="OverrideTitleCheckBox">
-    <value xml:space="preserve">Override title #: start at</value>
+  <data name="OverrideTitleCheckBox" xml:space="preserve">
+    <value>Override title #: start at</value>
   </data>
-  <data name="OverrideNameFormatCheckBox">
-    <value xml:space="preserve">Override naming format:</value>
+  <data name="QueueTitlesDialogTitle" xml:space="preserve">
+    <value>Queue Multiple Titles</value>
   </data>
-  <data name="QueueTitlesDialogTitle">
-    <value xml:space="preserve">Queue Multiple Titles</value>
-  </data>
-  <data name="TitleFormat">
-    <value xml:space="preserve">Title {0}</value>
-  </data>
-	<data name="OverrideDirectoryCheckBox" xml:space="preserve">
-    <value>Override directory:</value>
+  <data name="TitleFormat" xml:space="preserve">
+    <value>Title {0}</value>
   </data>
 </root>
