Added a dismissable help message for the picker window. Added a glow effect around the picker dropdown in the main window when a picker is saved, renamed or deleted.

--- a/VidCoder/Resources/CommonRes.resx
+++ b/VidCoder/Resources/CommonRes.resx
@@ -264,4 +264,8 @@ A full copy of the GNU General Public License has been included along with this 
   <data name="PreserveFolderStructureToolTip" xml:space="preserve">
     <value>If you encode a folder full of files the encoded versions will be put into subfolders to match the source directory structure.</value>
   </data>
+	<data name="DismissMessage" xml:space="preserve">
+    <value>Dismiss message</value>
+    <comment>Appears as a tooltip on inline, dismissable messages</comment>
+  </data>
 </root>
