--- a/VidCoder/Resources/EncodingRes.resx
+++ b/VidCoder/Resources/EncodingRes.resx
@@ -798,7 +798,7 @@ You should set this if you know your playback device only supports a certain pro
     <value>{0} (Default)</value>
   </data>
   <data name="EncodingWindowTitle" xml:space="preserve">
-    <value>Preset: {0}</value>
+    <value>Encoding preset: {0}</value>
   </data>
   <data name="AdvancedOptionsStringLabel" xml:space="preserve">
     <value>Additional advanced x264 options:</value>
@@ -986,10 +986,10 @@ Bicubic: This is an OpenCL hardware accelerated scaling algorithm.</value>
   <data name="PassthroughIfPossibleToolTip" xml:space="preserve">
     <value>If the input track matches the codec it will be passed through instead of encoded.</value>
   </data>
-	<data name="ScalingAlgorithmLabel" xml:space="preserve">
+  <data name="ScalingAlgorithmLabel" xml:space="preserve">
     <value>Scaling Algorithm:</value>
   </data>
-	<data name="RotationLabel" xml:space="preserve">
+  <data name="RotationLabel" xml:space="preserve">
     <value>Rotation:</value>
   </data>
 </root>
