Added encoding preset, automatic queue and automatic encode to pickers. Updated copyright year

--- a/VidCoder/Resources/PickerRes.resx
+++ b/VidCoder/Resources/PickerRes.resx
@@ -160,4 +160,10 @@
 	<data name="PickerHelpText" xml:space="preserve">
     <value>Automatically pick titles, audio, subtitles and destination</value>
   </data>
+	<data name="AutoQueueOnScanCheckBox" xml:space="preserve">
+    <value>Automatically queue after scanning</value>
+  </data>
+	<data name="AutoEncodeOnScanCheckBox" xml:space="preserve">
+    <value>Start encoding after scan</value>
+  </data>
 </root>
