--- a/VidCoder/Resources/CommonRes.resx
+++ b/VidCoder/Resources/CommonRes.resx
@@ -264,8 +264,16 @@ A full copy of the GNU General Public License has been included along with this 
   <data name="PreserveFolderStructureToolTip" xml:space="preserve">
     <value>If you encode a folder full of files the encoded versions will be put into subfolders to match the source directory structure.</value>
   </data>
-	<data name="DismissMessage" xml:space="preserve">
+  <data name="DismissMessage" xml:space="preserve">
     <value>Dismiss message</value>
     <comment>Appears as a tooltip on inline, dismissable messages</comment>
+  </data>
+  <data name="PresetFileFilter" xml:space="preserve">
+    <value>VidCoder Preset File</value>
+    <comment>File dialog description of a .vjpreset file: JSON file that stores an exported preset.</comment>
+  </data>
+  <data name="QueueFileFilter" xml:space="preserve">
+    <value>VidCoder Queue File</value>
+    <comment>File dialog description of a .vjqueue file: JSON file that stores an exported queue.</comment>
   </data>
 </root>
