--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -463,7 +463,7 @@
     <value>Error launching URL: {0}</value>
   </data>
   <data name="PresetImportErrorMessage" xml:space="preserve">
-    <value>Could not import preset. Format is unrecognized.</value>
+    <value>Failed to import preset. Check log for details.</value>
   </data>
   <data name="ImportErrorTitle" xml:space="preserve">
     <value>Import Error</value>
@@ -580,7 +580,7 @@
     <value>Export queue</value>
   </data>
   <data name="QueueImportErrorMessage" xml:space="preserve">
-    <value>Could not import queue. Format is unrecognized.</value>
+    <value>Failed to import queue. Check log for details.</value>
   </data>
   <data name="ImportPresetFilePickerTitle" xml:space="preserve">
     <value>Import preset file</value>
