--- a/VidCoder/Resources/PreviewRes.resx
+++ b/VidCoder/Resources/PreviewRes.resx
@@ -183,4 +183,11 @@
 	<data name="PlaySourceDisabledNotFoundToolTip" xml:space="preserve">
     <value>Could not find source file.</value>
   </data>
+  <data name="CloseVideoButton" xml:space="preserve">
+    <value>Close Video</value>
+    <comment>Button to close the preview video clip.</comment>
+  </data>
+  <data name="OpenInSystemPlayerButton" xml:space="preserve">
+    <value>Open in System Player</value>
+  </data>
 </root>
