Added button to replay the generated preview.

--- a/VidCoder/Resources/PreviewRes.resx
+++ b/VidCoder/Resources/PreviewRes.resx
@@ -193,4 +193,7 @@
   <data name="VolumeSliderLabel" xml:space="preserve">
     <value>Volume</value>
   </data>
+  <data name="ReplayPreviewButton" xml:space="preserve">
+    <value>Replay Preview</value>
+  </data>
 </root>
