Added video failure handling.

--- a/VidCoder/Resources/PreviewRes.resx
+++ b/VidCoder/Resources/PreviewRes.resx
@@ -196,4 +196,10 @@
   <data name="ReplayPreviewButton" xml:space="preserve">
     <value>Replay Preview</value>
   </data>
+  <data name="VideoErrorMessage" xml:space="preserve">
+    <value>Could not play video with built-in player. Would you like to open with the system player?</value>
+  </data>
+  <data name="VideoErrorTitle" xml:space="preserve">
+    <value>Video Error</value>
+  </data>
 </root>
